# gcg

./: .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  gcg.yaml  gcg_gemini.yaml  gcg_ollama.yaml  gcg_openai.yaml  package-lock.json  package.json  prompt_template.yaml
.github/workflows/: release.yml  rust.yml
src/: git.rs  main.rs  requests.rs  schemas.rs  utils.rs
