[package]
name = "gcg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
